--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
             #iconfont2{
             font-size: 23px;
             margin-right: 100px;
+            background-repeat: ;
            }
 
 
